--- a/css/app.css
+++ b/css/app.css
@@ -26,7 +26,16 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    max-width: 100%;
+    max-height: 100%;
 }
+
+.result {
+    align-self: center;
+    margin: 50%;
+    width: 50%;
+    text-align: center;
+ }
 
 h1 {
     font-family: 'Open Sans', sans-serif;
@@ -107,3 +116,7 @@ h1 {
     float: right;
     cursor: pointer;
 }
+
+/* * {
+    border: 1px solid red !important;
+} */
