--- a/css/app.css
+++ b/css/app.css
@@ -21,6 +21,10 @@ body {
     font-family: 'Coda', cursive;
 }
 
+.hide {
+    display: none !important;
+}
+
 .container {
     display: flex;
     justify-content: center;
@@ -32,7 +36,7 @@ body {
 
 .result {
     align-self: center;
-    margin: 50%;
+    margin: 25%;
     width: 50%;
     text-align: center;
  }
@@ -116,7 +120,3 @@ h1 {
     float: right;
     cursor: pointer;
 }
-
-/* * {
-    border: 1px solid red !important;
-} */
