--- a/css/app.css
+++ b/css/app.css
@@ -44,6 +44,19 @@ h1 {
   font-weight: 300;
 }
 
+button {
+  background-color: #02ccba;
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
 /*
  * Styles for the deck of cards
  */
